syntax = "proto3";

option go_package = "github.com/swarajroy/toll_calculator/types";

service DistanceAggregator {
    rpc AggregateDistance(AggregatorDistanceRequest) returns (None);
}

message None{}

message AggregatorDistanceRequest {
    int32 ObuID = 1;
    double Value = 2;
    int64 Unix = 3;
}

